# LiveGGLearn

./: local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/tantan/livegglearn/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tantan/livegglearn/: MainActivity.kt
app/src/main/java/com/tantan/livegglearn/util/: CommonUtils.java
app/src/main/java/com/tantan/livegglearn/view/: LiveSurfaceView.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tantan/livegglearn/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
media/: README.md  build.gradle
media/src/androidTest/java/com/putong/media/: ExampleInstrumentedTest.kt
media/src/main/: AndroidManifest.xml
media/src/main/cpp/: CMakeLists.txt  common_header_def.h  native_learn.cc
media/src/main/cpp/decoder/: VideoDecoder.cc  VideoDecoder.h
media/src/main/cpp/decoder/audio/: AudioDecoder.cc  AudioDecoder.h
media/src/main/cpp/decoder/video/: VideoDecoder.cc  VideoDecoder.h
media/src/main/cpp/log/: LogUtil.h
media/src/main/cpp/player/: MediaPlayer.cc  MediaPlayer.h
media/src/main/cpp/render/audio/: AudioRender.cc  AudioRender.h
media/src/main/cpp/render/video/: NativeRender.cc  NativeRender.h
media/src/main/cpp/utils/: CThread.cpp  CThread.h
media/src/main/java/com/putong/media/: JNIHelper.kt
media/src/test/java/com/putong/media/: ExampleUnitTest.kt
